--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -25,7 +25,7 @@
             </a>
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav d-flex align-items-center me-auto">
-                {% if is_granted('ROLE_GOE') %}
+                {% if is_granted('ROLE_READER') %}
                     <!--
                     <li><a class="nav-link" href="{{path('home')}}"><i class="fa-solid fa-house"></i></a></li>
                     -->
