--- a/templates/statistics.html.twig
+++ b/templates/statistics.html.twig
@@ -6,6 +6,8 @@
     <div class="container row">
         <div class="col-md-3 sticky-scroll">
             <!-- Select SN -->
+            {{form(filterForm)}}
+            {#
             <select name="" id="filterSn" class="filterStat w-100" data-category="sn">
                 <option value="" selected disabled hidden>Filter SN</option>
                 {% for device, key in deviceArray %}
@@ -14,7 +16,6 @@
                 </option>
                 {% endfor %}
             </select>
-            <!-- Select PathoType -->
             <select name="" id="filterPathoType" class="filterStat w-100" data-category="pathoType">
                 <option value="" selected disabled hidden>Filter PathoType</option>
                 {% for item, key in pathoTypeArray %}
@@ -23,7 +24,6 @@
                 </option>
                 {% endfor %}
             </select>
-            <!-- Select Zone -->
             <select name="" id="filterZone" class="filterStat w-100" data-category="zone">
                 <option value="" selected disabled hidden>Filter Zone</option>
                 {% for item, key in zoneArray %}
@@ -32,7 +32,6 @@
                 </option>
                 {% endfor %}
             </select>
-            <!-- Select Patho -->
             <select name="" id="filterPatho" class="filterStat w-100" data-category="patho">
                 <option value="" selected disabled hidden>Filter Patho</option>
                 {% for item, key in pathoArray %}
@@ -41,7 +40,6 @@
                 </option>
                 {% endfor %}
             </select>
-            <!-- Select Accessoire -->
             <select name="" id="filterTool" class="filterStat w-100" data-category="tool">
                 <option value="" selected disabled hidden>Filter Tools</option>
                 {% for item, key in toolArray %}
@@ -50,6 +48,7 @@
                 </option>
                 {% endfor %}
             </select>
+            #}
         </div>
         <!-- ===== TREATMENTS GRAPH ===== -->
         <div class="col-md-9 h-100">
@@ -60,35 +59,35 @@
                 <div class="sn_list" style="display: none">{{ device }}</div>
                 <div class="sn_count" style="display: none">{{ key }}</div>
             {% endfor %}
-            <canvas id="myChart"></canvas>
+            <canvas id="chartSn"></canvas>
             <!-- Treatments by PathoType -->
             <h4>Treatments by PathoType</h4>
             {% for item, key in pathoTypeArray %}
                 <div class="pathoType_list" style="display: none">{{ item }}</div>
                 <div class="pathoType_count" style="display: none">{{ key }}</div>
             {% endfor %}
-            <canvas id="myChart2"></canvas>
+            <canvas id="chartPathoType"></canvas>
             <!-- Treatments by Zone -->
             <h4>Treatments by Zone</h4>
             {% for item, key in zoneArray %}
                 <div class="zone_list" style="display: none">{{ item }}</div>
                 <div class="zone_count" style="display: none">{{ key }}</div>
             {% endfor %}
-            <canvas id="myChart3"></canvas>
+            <canvas id="chartZone"></canvas>
             <!-- Treatments by Patho -->
             <h4>Treatments by Patho</h4>
             {% for item, key in pathoArray %}
-                <div class="patho_list" style="">{{ item }}</div>
-                <div class="patho_count" style="">{{ key }}</div>
+                <div class="patho_list" style="display: none">{{ item }}</div>
+                <div class="patho_count" style="display: none">{{ key }}</div>
             {% endfor %}
-            <canvas id="myChart4"></canvas>
+            <canvas id="chartPatho"></canvas>
             <!-- Treatments by Tools -->
             <h4>Treatments by Tools</h4>
             {% for item, key in toolArray %}
                 <div class="tool_list" style="display: none">{{ item }}</div>
                 <div class="tool_count" style="display: none">{{ key }}</div>
             {% endfor %}
-            <canvas id="myChart5"></canvas>
+            <canvas id="chartTool"></canvas>
         </div>
     </div>
     
