--- a/templates/device/info_modals.html.twig
+++ b/templates/device/info_modals.html.twig
@@ -41,6 +41,10 @@
                             <th>{{ 'Country'|trans }} :</th>
                             <td>{{device.country}}</td>
                         </tr>
+                        <tr>
+                            <th>{{ 'City'|trans }} :</th>
+                            <td>{{device.city}}</td>
+                        </tr>
                         {#
                         <tr>
                             <th>{{ 'Log Pointer'|trans }} :</th>
