--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -75,6 +75,13 @@
                                         <thead>
                                         <tr>
                                             <th>
+                                            Actual version : 
+                                            {{ family.actualVersion }}
+                                            <div class="input-group d-flex flex-nowrap text-break overflow-hidden actualVersion-update-form">
+                                                <input class="actualVersion_update_input border border-0" style="background-color:#f1874144;" type="text" name="nm" value="{{family.actualVersion.version}}">
+                                                <button class="actualVersion_update_button btn btn-dark border-0" type="button" name="name" value="" data-id="{{family.id}}"><i class="fa-solid fa-check"></i></button>
+                                            </div>
+                                            {#
                                             <select name="" id="">
                                             <option value="" selected disabled hidden>Actual Version</option>
                                             {% for soft in softwares %}
@@ -83,6 +90,7 @@
                                                 </option>
                                             {% endfor %}
                                             </select>
+                                            #}
                                             </th>
                                         </tr>
                                         </thead>
@@ -98,7 +106,8 @@
                                                 
                                                 <td class="text-center">
                                                     {% if is_granted("ROLE_ADMIN") %}
-                                                        <a 'download' href="{{ asset('uploads/softwares/' ~ family.name ~ '/' ~ soft.name) }}">{{soft.name}}</a>
+                                                        <!--<a 'download' href="{{ asset('uploads/softwares/' ~ family.name ~ '/' ~ soft.name) }}">{{soft.name}}</a>-->
+                                                        <a 'download' href="{{ asset(ressource_directory ~ 'package/' ~ family.name ~ '/' ~ soft.name) }}">{{soft.name}}</a>
                                                     {% else %}
                                                         {{soft.name}}
                                                     {% endif %}
