--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -107,7 +107,8 @@
                                                 <td class="text-center">
                                                     {% if is_granted("ROLE_ADMIN") %}
                                                         <!--<a 'download' href="{{ asset('uploads/softwares/' ~ family.name ~ '/' ~ soft.name) }}">{{soft.name}}</a>-->
-                                                        <a 'download' href="{{ asset(ressource_directory ~ 'package/' ~ family.name ~ '/' ~ soft.name) }}">{{soft.name}}</a>
+                                                        <!--<a 'download' href="{{ asset(ressource_directory ~ 'package/' ~ family.name ~ '/' ~ soft.name) }}">{{soft.name}}</a>-->
+                                                        <a 'download' href="{{ asset(uploads_directory ~ soft.name) }}">{{soft.name}}</a>
                                                     {% else %}
                                                         {{soft.name}}
                                                     {% endif %}
