--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -76,11 +76,14 @@
                                         <tr>
                                             <th>
                                             Actual version : 
+                                            {#
                                             {{ family.actualVersion }}
+                                            
                                             <div class="input-group d-flex flex-nowrap text-break overflow-hidden actualVersion-update-form">
                                                 <input class="actualVersion_update_input border border-0" style="background-color:#f1874144;" type="text" name="nm" value="{{family.actualVersion.version}}">
                                                 <button class="actualVersion_update_button btn btn-dark border-0" type="button" name="name" value="" data-id="{{family.id}}"><i class="fa-solid fa-check"></i></button>
                                             </div>
+                                            #}
                                             {#
                                             <select name="" id="">
                                             <option value="" selected disabled hidden>Actual Version</option>
@@ -109,7 +112,7 @@
                                                         <!--<a 'download' href="{{ asset('uploads/softwares/' ~ family.name ~ '/' ~ soft.name) }}">{{soft.name}}</a>-->
                                                         <!--<a 'download' href="{{ asset(ressource_directory ~ 'package/' ~ family.name ~ '/' ~ soft.name) }}">{{soft.name}}</a>-->
                                                         <!--<a 'download' href="{{ asset('Ressource/Ressource/' ~ soft.name) }}">{{soft.name}}</a>-->
-                                                        <a download href="{{ ressource_path ~ soft.name }}">{{soft.name}}</a>
+                                                        <a download href="{{ asset(ressource_path  ~ 'package/' ~ family.name ~ '/' ~ soft.name) }}">{{soft.name}}</a>
                                                     {% else %}
                                                         {{soft.name}}
                                                     {% endif %}
