update access actual version

--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -71,7 +71,7 @@
                                                 {% endif %}
                                             </tr>
                                         </thead>
-                                        {% if is_granted("ROLE_SUPER_ADMIN") %}
+                                        {% if is_granted("ROLE_ADMIN") %}
                                         <thead>
                                         <tr>
                                             <th>
