--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -67,8 +67,11 @@
                                                 </th>
                                                 {% if is_granted("ROLE_ADMIN") %}
                                                 <th class="text-center"><i class="fa-solid fa-trash"></i></th>
+                                                {% endif %}
+                                                {% if is_granted("ROLE_SAV") %}
                                                 <th class="text-center">{{ 'Update Comment'|trans }}</th>
                                                 {% endif %}
+                                                
                                             </tr>
                                         </thead>
                                         {% if is_granted("ROLE_ADMIN") %}
@@ -108,7 +111,7 @@
                                             <tr style="font-size: 12px;">
                                                 
                                                 <td class="text-center">
-                                                    {% if is_granted("ROLE_ADMIN") %}
+                                                    {% if is_granted("ROLE_SAV") %}
                                                         <a download href="{{ asset(ressource_path  ~ 'package/' ~ family.name ~ '/' ~ soft.name) }}">{{soft.name}}</a>
                                                     {% else %}
                                                         {{soft.name}}
@@ -116,6 +119,8 @@
                                                 </td>
                                                 <td class="text-center">{{soft.version}}</td>
                                                 <td class="text-center">{{soft.createdAt|format_datetime('medium', 'short')}}</td>
+
+                                                
                                                 {% if is_granted("ROLE_ADMIN") %}
                                                 <td class="text-center">
                                                     <a href="#" class="btn rounded-1 bg-orange btn-outline-orange press modal-trigger" 
@@ -125,12 +130,19 @@
                                                     data-bs-toggle="modal"><i class="fa-solid fa-trash"></i></a>
                                                 </td>
                                                 <td class="text-center">
-                                                    <div class="input-group d-flex flex-nowrap text-break overflow-hidden comment-update-form">
+                                                    <div class="input-group d-flex flex-nowrap text-break overflow-auto comment-update-form">
                                                         <input class="comment_update_input border border-0" style="background-color:#f1874144;" type="text" name="nm" value="{{soft.updateComment}}">
                                                         <button class="comment_update_button btn btn-dark border-0" type="button" name="name" value="" data-id="{{soft.id}}"><i class="fa-solid fa-check"></i></button>
                                                     </div>
                                                 </td>
+                                                {% elseif is_granted("ROLE_SAV") %}
+                                                <td class="text-center">
+                                                    <div class="d-flex justify-content-center flex-nowrap text-break overflow-auto comment-update-form">
+                                                        <input class="comment_update_input border border-0" type="text" name="nm" value="{{soft.updateComment}}" disabled>
+                                                    </div>
+                                                </td>
                                                 {% endif %}
+                                                
                                             </tr>
                                             
                                             
