--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -519,12 +519,14 @@ background: #eee;
     }
 }
 
-.comment_input {
+.comment_update_input {
     &:active {
-        background-color: #ffffff !important;
+        //background-color: #ffffff !important;
+        background-color:#f1874144 !important;
     }
     &:focus {
-        background-color: #ffffff !important;
+        //background-color: #ffffff !important;
+        background-color:#f1874144 !important;
     }
 }
 
