--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -76,29 +76,30 @@
                                         </thead>
                                         {% if is_granted("ROLE_ADMIN") %}
                                         <thead>
-                                        <tr>
-                                            <th>
-                                            Actual version : 
                                             
-                                            {{ family.actualVersion }}
-                                            
-                                            <div class="input-group d-flex flex-nowrap text-break overflow-hidden actualVersion-update-form">
-                                                <input class="actualVersion_update_input border border-0" style="background-color:#f1874144;" type="text" name="nm" value="">
-                                                <button class="actualVersion_update_button btn btn-dark border-0" type="button" name="name" value="" data-id="{{family.id}}"><i class="fa-solid fa-check"></i></button>
-                                            </div>
-                                            
-                                            {#
-                                            <select name="" id="">
-                                            <option value="" selected disabled hidden>Actual Version</option>
-                                            {% for soft in softwares %}
-                                                <option value={{soft}} class="select-version" data-devicefamily="{{soft.deviceFamily}}">
-                                                {{soft}}
-                                                </option>
-                                            {% endfor %}
-                                            </select>
-                                            #}
-                                            </th>
-                                        </tr>
+                                            <tr>
+                                                <th>
+                                                <span>
+                                                Actual version :
+                                                {{ family.actualVersion }}
+                                                </span>
+                                                <div class="input-group d-flex flex-nowrap text-break overflow-hidden actualVersion-update-form">
+                                                    <input class="comment_update_input actualVersion_update_input border border-0" style="background-color:rgb(236, 236, 236);" type="text" name="nm" value="">
+                                                    <button class="actualVersion_update_button btn btn-dark border-0" type="button" name="name" value="" data-id="{{family.id}}"><i class="fa-solid fa-check"></i></button>
+                                                </div>
+                                                
+                                                {#
+                                                <select name="" id="">
+                                                <option value="" selected disabled hidden>Actual Version</option>
+                                                {% for soft in softwares %}
+                                                    <option value={{soft}} class="select-version" data-devicefamily="{{soft.deviceFamily}}">
+                                                    {{soft}}
+                                                    </option>
+                                                {% endfor %}
+                                                </select>
+                                                #}
+                                                </th>
+                                            </tr>
                                         </thead>
                                         {% endif %}
                                         <tbody class="accordion-body">
@@ -131,7 +132,7 @@
                                                 </td>
                                                 <td class="text-center">
                                                     <div class="input-group d-flex flex-nowrap text-break overflow-auto comment-update-form">
-                                                        <textarea class="comment_update_input border border-0" style="background-color:#f1874144;" type="text" name="nm" value="">{{soft.updateComment}}</textarea>
+                                                        <textarea class="comment_update_input border border-0" style="background-color:#ffffff;" type="text" name="nm" value="">{{soft.updateComment}}</textarea>
                                                         <button class="comment_update_button btn btn-dark border-0" type="button" name="name" value="" data-id="{{soft.id}}"><i class="fa-solid fa-check"></i></button>
                                                     </div>
                                                 </td>
